--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -34,28 +34,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3bd5418b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "OSError",
-     "evalue": "libcudart.so.10.2: cannot open shared object file: No such file or directory",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mWEST\u001b[39;00m \u001b[39mimport\u001b[39;00m west\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mdatatable\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mdt\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n",
-      "File \u001b[0;32m~/cai/spatial/github/WEST.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mSpaceFlow\u001b[39;00m \u001b[39mimport\u001b[39;00m SpaceFlow\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mscanpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msc\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n",
-      "File \u001b[0;32m~/cai/spatial/github/SpaceFlow.py:15\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mscipy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mspatial\u001b[39;00m \u001b[39mimport\u001b[39;00m distance_matrix\n\u001b[0;32m---> 15\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtorch_geometric\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mnn\u001b[39;00m \u001b[39mimport\u001b[39;00m GCNConv, DeepGraphInfomax\n\u001b[1;32m     16\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mneighbors\u001b[39;00m \u001b[39mimport\u001b[39;00m kneighbors_graph\n\u001b[1;32m     17\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutil\u001b[39;00m \u001b[39mimport\u001b[39;00m sparse_mx_to_torch_edge_list, corruption, figure\n",
-      "File \u001b[0;32m~/anaconda3/envs/gcn2/lib/python3.8/site-packages/torch_geometric/__init__.py:4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtypes\u001b[39;00m \u001b[39mimport\u001b[39;00m ModuleType\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mimportlib\u001b[39;00m \u001b[39mimport\u001b[39;00m import_module\n\u001b[0;32m----> 4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch_geometric\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch_geometric\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mloader\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch_geometric\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtransforms\u001b[39;00m\n",
-      "File \u001b[0;32m~/anaconda3/envs/gcn2/lib/python3.8/site-packages/torch_geometric/data/__init__.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mdata\u001b[39;00m \u001b[39mimport\u001b[39;00m Data\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mhetero_data\u001b[39;00m \u001b[39mimport\u001b[39;00m HeteroData\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mtemporal\u001b[39;00m \u001b[39mimport\u001b[39;00m TemporalData\n",
-      "File \u001b[0;32m~/anaconda3/envs/gcn2/lib/python3.8/site-packages/torch_geometric/data/data.py:9\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtorch\u001b[39;00m \u001b[39mimport\u001b[39;00m Tensor\n\u001b[0;32m----> 9\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtorch_sparse\u001b[39;00m \u001b[39mimport\u001b[39;00m SparseTensor\n\u001b[1;32m     11\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtorch_geometric\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mstorage\u001b[39;00m \u001b[39mimport\u001b[39;00m (BaseStorage, EdgeStorage,\n\u001b[1;32m     12\u001b[0m                                           GlobalStorage, NodeStorage)\n\u001b[1;32m     13\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtorch_geometric\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdeprecation\u001b[39;00m \u001b[39mimport\u001b[39;00m deprecated\n",
-      "File \u001b[0;32m~/anaconda3/envs/gcn2/lib/python3.8/site-packages/torch_sparse/__init__.py:19\u001b[0m\n\u001b[1;32m     17\u001b[0m spec \u001b[39m=\u001b[39m cuda_spec \u001b[39mor\u001b[39;00m cpu_spec\n\u001b[1;32m     18\u001b[0m \u001b[39mif\u001b[39;00m spec \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m---> 19\u001b[0m     torch\u001b[39m.\u001b[39;49mops\u001b[39m.\u001b[39;49mload_library(spec\u001b[39m.\u001b[39;49morigin)\n\u001b[1;32m     20\u001b[0m \u001b[39melse\u001b[39;00m:  \u001b[39m# pragma: no cover\u001b[39;00m\n\u001b[1;32m     21\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mImportError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mCould not find module \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mlibrary\u001b[39m}\u001b[39;00m\u001b[39m_cpu\u001b[39m\u001b[39m'\u001b[39m\u001b[39m in \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     22\u001b[0m                       \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mosp\u001b[39m.\u001b[39mdirname(\u001b[39m__file__\u001b[39m)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/anaconda3/envs/gcn2/lib/python3.8/site-packages/torch/_ops.py:643\u001b[0m, in \u001b[0;36m_Ops.load_library\u001b[0;34m(self, path)\u001b[0m\n\u001b[1;32m    638\u001b[0m path \u001b[39m=\u001b[39m _utils_internal\u001b[39m.\u001b[39mresolve_library_path(path)\n\u001b[1;32m    639\u001b[0m \u001b[39mwith\u001b[39;00m dl_open_guard():\n\u001b[1;32m    640\u001b[0m     \u001b[39m# Import the shared library into the process, thus running its\u001b[39;00m\n\u001b[1;32m    641\u001b[0m     \u001b[39m# static (global) initialization code in order to register custom\u001b[39;00m\n\u001b[1;32m    642\u001b[0m     \u001b[39m# operators with the JIT.\u001b[39;00m\n\u001b[0;32m--> 643\u001b[0m     ctypes\u001b[39m.\u001b[39;49mCDLL(path)\n\u001b[1;32m    644\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mloaded_libraries\u001b[39m.\u001b[39madd(path)\n",
-      "File \u001b[0;32m~/anaconda3/envs/gcn2/lib/python3.8/ctypes/__init__.py:373\u001b[0m, in \u001b[0;36mCDLL.__init__\u001b[0;34m(self, name, mode, handle, use_errno, use_last_error, winmode)\u001b[0m\n\u001b[1;32m    370\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_FuncPtr \u001b[39m=\u001b[39m _FuncPtr\n\u001b[1;32m    372\u001b[0m \u001b[39mif\u001b[39;00m handle \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 373\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_handle \u001b[39m=\u001b[39m _dlopen(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_name, mode)\n\u001b[1;32m    374\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    375\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_handle \u001b[39m=\u001b[39m handle\n",
-      "\u001b[0;31mOSError\u001b[0m: libcudart.so.10.2: cannot open shared object file: No such file or directory"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/stat/anaconda3/envs/gcn2/lib/python3.8/site-packages/torch_geometric/typing.py:31: UserWarning: An issue occurred while importing 'torch-scatter'. Disabling its usage. Stacktrace: libcudart.so.10.2: cannot open shared object file: No such file or directory\n",
+      "  warnings.warn(f\"An issue occurred while importing 'torch-scatter'. \"\n",
+      "/home/stat/anaconda3/envs/gcn2/lib/python3.8/site-packages/torch_geometric/typing.py:42: UserWarning: An issue occurred while importing 'torch-sparse'. Disabling its usage. Stacktrace: libcudart.so.10.2: cannot open shared object file: No such file or directory\n",
+      "  warnings.warn(f\"An issue occurred while importing 'torch-sparse'. \"\n",
+      "/home/stat/anaconda3/envs/gcn2/lib/python3.8/site-packages/numba/np/ufunc/parallel.py:365: NumbaWarning: The TBB threading layer requires TBB version 2019.5 or later i.e., TBB_INTERFACE_VERSION >= 11005. Found TBB_INTERFACE_VERSION = 9107. The TBB threading layer is disabled.\n",
+      "  warnings.warn(problem)\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style type='text/css'>\n",
+       ".datatable table.frame { margin-bottom: 0; }\n",
+       ".datatable table.frame thead { border-bottom: none; }\n",
+       ".datatable table.frame tr.coltypes td {  color: #FFFFFF;  line-height: 6px;  padding: 0 0.5em;}\n",
+       ".datatable .bool    { background: #DDDD99; }\n",
+       ".datatable .object  { background: #565656; }\n",
+       ".datatable .int     { background: #5D9E5D; }\n",
+       ".datatable .float   { background: #4040CC; }\n",
+       ".datatable .str     { background: #CC4040; }\n",
+       ".datatable .time    { background: #40CC40; }\n",
+       ".datatable .row_index {  background: var(--jp-border-color3);  border-right: 1px solid var(--jp-border-color0);  color: var(--jp-ui-font-color3);  font-size: 9px;}\n",
+       ".datatable .frame tbody td { text-align: left; }\n",
+       ".datatable .frame tr.coltypes .row_index {  background: var(--jp-border-color0);}\n",
+       ".datatable th:nth-child(2) { padding-left: 12px; }\n",
+       ".datatable .hellipsis {  color: var(--jp-cell-editor-border-color);}\n",
+       ".datatable .vellipsis {  background: var(--jp-layout-color0);  color: var(--jp-cell-editor-border-color);}\n",
+       ".datatable .na {  color: var(--jp-cell-editor-border-color);  font-size: 80%;}\n",
+       ".datatable .sp {  opacity: 0.25;}\n",
+       ".datatable .footer { font-size: 9px; }\n",
+       ".datatable .frame_dimensions {  background: var(--jp-border-color3);  border-top: 1px solid var(--jp-border-color0);  color: var(--jp-ui-font-color3);  display: inline-block;  opacity: 0.6;  padding: 1px 10px 1px 5px;}\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -86,17 +111,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "af382fed",
    "metadata": {},
    "outputs": [],
    "source": [
     "#### Gene expression\n",
-    "X = dt.fread('../data/DLPFC/DLPFC_151673_X.csv')\n",
+    "X = dt.fread('../data/DLPFC/DLPFC_151510_X.csv')\n",
     "#### Spatial location\n",
-    "S = dt.fread('../data/DLPFC/DLPFC_151673_S.csv')\n",
+    "S = dt.fread('../data/DLPFC/DLPFC_151510_S.csv')\n",
     "#### Real cluster\n",
-    "true_cluster = pd.read_csv('../data/DLPFC/DLPFC_151673_cls.csv')\n",
+    "true_cluster = pd.read_csv('../data/DLPFC/DLPFC_151510_cls.csv')\n",
     "\n",
     "#### Construct west object\n",
     "west_obj = west(X, S)"
@@ -116,39 +141,42 @@
    "id": "899023a8",
    "metadata": {},
    "source": [
-    "The WEST will be trained after preprocessing. The parameters can be tuned are listed in the \"preprocess\" and \"train\" command. All the values listed here are the default values. \n",
+    "The WEST will be trained after preprocessing. The parameters can be tuned are listed in the \"**preprocess**\" and \"**train**\" command. All the values listed here are the default values. \n",
     "\n",
-    "In the preprocess part, \"screening\" indicates whether to screen the genes according to the expression level of each gene. \n",
+    "In the \"**preprocess**\" part, \"**screening**\" indicates whether to screen the genes according to the expression level of each gene. \n",
     "\n",
-    "In the train part, \"combine\" indicates whether to use the cluster result from SpaGCN to help construct the spot network in the SpaceFlow. According to our experience, setting \"combine\" to TRUE in the analysis of the sequencing-based data with a pre-established coordinate, such as Visium from 10X, can always have a better result. \n",
+    "In the \"**train**\" part, \"**combine**\" indicates whether to use the cluster result from SpaGCN to help construct the spot network in the SpaceFlow. According to our experience, setting \"**combine**\" to TRUE in the analysis of the sequencing-based data with a pre-established coordinate, such as Visium from 10X, can always have a better result. \n",
     "\n",
-    "\"n_clusters\" and \"resolution\" control the cluster performance of the two sub-methods SpaGCN and SpaceFlow, respectively. These two parameters do not need to be known exactly, as long as in a reasonable region, since what WEST needs from these two methods are the low dimensional embeddings, instead of the clustering result. \n",
+    "\"**n_clusters**\" and \"**resolution**\" control the cluster performance of the two sub-methods SpaGCN and SpaceFlow, respectively. These two parameters do not need to be known exactly, as long as in a reasonable region, since what WEST needs from these two methods are the low dimensional embeddings, instead of the clustering result. \n",
     "\n",
-    "\"p\" and \"regularization\" are the parameters used to adjust the weight of spatial location over gene expression for SpaGCN and SpaceFlow, respectively. The spatial pattern will be stronger if these two values are greater. The analysis will be degenerated to using gene expression only, if these two parameters equal 0. "
+    "\"**p**\" and \"**regularization**\" are the parameters used to adjust the weight of spatial location over gene expression for SpaGCN and SpaceFlow, respectively. The spatial pattern will be stronger if these two values are greater. The analysis will be degenerated to using gene expression only, if these two parameters equal 0. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "94e1b986",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING: You’re trying to run this on 100 dimensions of `.X`, if you really want this, set `use_rep='X'`.\n",
-      "         Falling back to preprocessing with `sc.pp.pca` and default params.\n"
+     "ename": "AttributeError",
+     "evalue": "'west' object has no attribute 'prreprocess'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m#### Preprocess\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m west_obj\u001b[39m.\u001b[39;49mprreprocess(min_cells \u001b[39m=\u001b[39m \u001b[39m3\u001b[39m, \u001b[39m# number of minimum expressed spots for each gene \u001b[39;00m\n\u001b[1;32m      3\u001b[0m                     n_top_genes \u001b[39m=\u001b[39m \u001b[39m1000\u001b[39m, \u001b[39m# number of remained genes with highest number of counts\u001b[39;00m\n\u001b[1;32m      4\u001b[0m                     n_comps \u001b[39m=\u001b[39m \u001b[39m100\u001b[39m, \u001b[39m# number of remained components in PCA\u001b[39;00m\n\u001b[1;32m      5\u001b[0m                     screening \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m) \u001b[39m# whether implements screening to genes\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m#### Training\u001b[39;00m\n\u001b[1;32m      7\u001b[0m west_obj\u001b[39m.\u001b[39mtrain(combine \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m, \u001b[39m# whether combine two ensemble methods\u001b[39;00m\n\u001b[1;32m      8\u001b[0m                 n_clusters \u001b[39m=\u001b[39m \u001b[39m7\u001b[39m, \u001b[39m# number of clusters for SpaGCN\u001b[39;00m\n\u001b[1;32m      9\u001b[0m                 resolution \u001b[39m=\u001b[39m \u001b[39m0.3\u001b[39m, \u001b[39m# resolution for SpaceFlow\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     13\u001b[0m                 regularization \u001b[39m=\u001b[39m \u001b[39m0.01\u001b[39m, \u001b[39m# spatial factor for SpaceFlow\u001b[39;00m\n\u001b[1;32m     14\u001b[0m                 seed \u001b[39m=\u001b[39m \u001b[39m1234\u001b[39m) \u001b[39m# random seed\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'west' object has no attribute 'prreprocess'"
      ]
     }
    ],
    "source": [
     "%%capture captured_output\n",
     "#### Preprocess\n",
-    "west_obj.prreprocess(min_cells = 3, # number of minimum expressed spots for each gene \n",
+    "west_obj.preprocess(min_cells = 3, # number of minimum expressed spots for each gene \n",
     "                    n_top_genes = 1000, # number of remained genes with highest number of counts\n",
     "                    n_comps = 100, # number of remained components in PCA\n",
-    "                    screening = True): # whether implements screening to genes\n",
+    "                    screening = True) # whether implements screening to genes\n",
     "#### Training\n",
     "west_obj.train(combine = True, # whether combine two ensemble methods\n",
     "                n_clusters = 7, # number of clusters for SpaGCN\n",
@@ -157,7 +185,7 @@
     "                n_neighbors = 100, # number of neighbors for the weighted ensemble method\n",
     "                p = 0.5, # spatial factor for SpaGCN\n",
     "                regularization = 0.01, # spatial factor for SpaceFlow\n",
-    "                seed = 1234): # random seed"
+    "                seed = 1234) # random seed"
    ]
   },
   {
@@ -173,7 +201,7 @@
    "id": "451762f9",
    "metadata": {},
    "source": [
-    "The training part returns a low dimensional embedding of all the spots. The \"cluster\" command implement clustering using Leiden method. The result can be adjusted using the parameter \"resolution\". "
+    "The training part returns a low dimensional embedding of all the spots. The \"**cluster**\" command implement clustering using Leiden method. The result can be adjusted using the parameter \"**resolution**\". The evaluation of the clustering performance is presented by calculating the adjusted rand index between the clustering result and the manually annotated labels. "
    ]
   },
   {
