--- a/tutorial/WEST.ipynb
+++ b/tutorial/WEST.ipynb
@@ -44,8 +44,8 @@
     "\n",
     "from sklearn.metrics.cluster import adjusted_rand_score\n",
     "\n",
-    "from ../WEST import WEST\n",
-    "import ../WEST_plt"
+    "from WEST import WEST\n",
+    "import WEST_plt"
    ]
   },
   {
